log
Tue, Mar 18, 2025 12:30:21 PM: 
 tests:  0|4
total_score: 10/70
3f6cb15
Tue, Mar 18, 2025  1:11:14 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, &elemento);
       ^~~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:60:11: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    while(L->current != NULL){
           ^~
exercises.c:61:29: error: implicit declaration of function 'firts' [-Werror=implicit-function-declaration]
       int *elemento = (int*)firts(L);
                             ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
806e0c4
